# stock-transformer

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  plan.md  pyproject.toml  review.md  run.ipynb  run.py  run_analysis.py
.cursor/rules/: 00-project-context.mdc  10-python-contracts.mdc  20-testing-and-data.mdc  30-config-cli-artifacts.mdc  40-milestone-workflow.mdc
.github/workflows/: ci.yml  release.yml
canonical/timeframe=daily/symbol=COIN/: part-000.csv
canonical/timeframe=daily/symbol=IBIT/: part-000.csv
canonical/timeframe=daily/symbol=MSTR/: part-000.csv
canonical/timeframe=daily/symbol=QQQ/: part-000.csv
completions/: stx.bash  stx.fish  stx.zsh
configs/: default.yaml  download.yaml  mstr_ibit.yaml  sample.yaml  sector_map.yaml  sp500.txt  universe.yaml
data/processed/: _universe_split.json  ohlcv.parquet
data/processed/corporate_actions/: dividends.parquet  splits.parquet
data/processed/fundamentals/: balance_sheet.parquet  cash_flow.parquet  company_overview.parquet  earnings.parquet  etf_holdings.parquet  etf_profile.parquet  income_statement.parquet
data/processed/macro/: cpi.parquet  durables.parquet  federal_funds_rate.parquet  (+7 more)
docs/: CLI_GUIDE.md  data_download.md
man/: stx-backtest.1  stx-completion.1  stx-config-diff.1  stx-config-show.1  stx-config.1  stx-data-fetch.1  stx-data.1  stx-fetch.1  stx-sweep.1  stx-validate.1  stx-version.1  stx.1
raw/time_series_daily_adjusted/: 3ef88bcf1e87fe0e.json  643462f8aab3ddc9.json  b5aa9174ab2376c4.json  fcbfc4228363935f.json
scripts/: download_data.py  fetch_sample_data.py  sweep_loss.py
src/stock_transformer/: __init__.py  av_download.py  av_parsers.py  backtest.py  cli.py  config_models.py  config_validate.py  data.py  device.py  features.py  model.py  train.py
tests/: conftest.py  test_alphavantage_intraday.py  test_av_client.py  test_av_download.py  test_av_parsers.py  test_backtest.py  test_baselines_tabular.py  test_candle_store.py  test_cli_dispatch.py  test_config_validate.py  test_cross_sectional_features.py  test_cross_sectional_labels.py  test_data_integrity.py  test_feature_schema_hash.py  test_leakage_universe.py  test_mcp_rest_parity.py  test_membership_richer.py  test_multitimeframe.py  test_portfolio_sim.py  test_predictions_schema.py  test_ranking_losses.py  test_ranking_metrics.py  test_resolve_device.py  test_run_artifacts.py  test_runner_synthetic.py  test_sector_neutral_labels.py  test_sequences.py  test_summary_per_sector.py  test_sweep_loss.py  test_universe_runner_synthetic.py  test_universe_tensor.py  test_walkforward.py
tests/cli_subprocess_helpers/: backtest_exit_130.py  backtest_exit_2.py
tests/golden/: predictions_universe.csv
(+3985 files in other folders)
