[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-transformer"
version = "0.1.0"
description = "Leakage-safe autoregressive candle forecasting and walk-forward backtest harness."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "requests>=2.28",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "torch>=2.2",
  "pyarrow>=15",
  "pydantic>=2.6",
  "python-dotenv>=1.2.2",
  "click>=8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.8",
  "types-PyYAML>=6.0",
  "types-requests>=2.31",
]

[project.scripts]
stx = "stock_transformer.cli:main"
stx-backtest = "stock_transformer.cli:main_backtest_compat"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stock_transformer = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"tests/cli_subprocess_helpers/**" = ["E402"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "click-man>=0.5.1",
    "rich>=15.0.0",
]
