[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-transformer"
version = "0.3.0"
description = "Prototype: predict next-day SPY candle using a transformer over multi-ticker candle tokens."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "requests>=2.28",
  "torch>=2.2",
  "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
